# oraki

./: .gitignore  Cargo.toml  Makefile  README.md  main.example.csv
extra/: example.list  main.css  style.css
src/: anki.rs  main.rs  or.rs  utils.rs
