[package]
name = "oraki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soup = "0.5.1"
reqwest = "0.11.14"
select = "0.5.0"
tokio = { version = "1.12.0", features = ["full"]}
# error-chain = "0.12.4"
serde_json = "1"
genanki-rs = "0.3"
scraper = "0.14.0"
regex = "1.7.1"
csv = "1.2.0"
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
